# trialmatch-ai

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
data/benchmarks/: metrics_snapshot.json  patient_profiles.json
data/raw/: trials_snapshot.jsonl
docs/: portfolio_pitch.md
scripts/: bootstrap.ps1  run_demo.ps1
src/trialmatch/: __init__.py  config.py  evaluate.py  fetch.py  match.py  schemas.py  utils.py
tests/: test_match.py
